updated tests to support Openapi Backend Using default functions for Openapi Backend validationFail, notFound and methodNotAllowed Fix for metrics not working
